redmine:/var/git/civet.git

Version 1.7.5
-------------
Bug fixes
 - abort_pipeline bash function writes status file first, before issuing 
   all of the qdel commands.  This is in case the qdels hang and cause 
   the epilogue to time out.

Features
 - Batch scripts now include as a comment the path to the tool XML file used to
   generate the script.

Version 1.7.4
-------------
Bug fixes
 - Specify filename for torque stderr file, Torque had problems in certain
   cases if we only provide the directory and not filename for stderr.

Version 1.7.3
-------------
Bug fixes
 - civet_status now follows symlinks when scanning for log directories
 - civet_status does not report success if the pipeline_batch_id_list.txt is
   empty, now reports that there was a submission failure
 - Detect conditions where Torque stdout/stderr files will get created with a
   group that the user does not belong to, which prevents the user job epilogue
   from executing.

Features
 - Add new "pipeline_root" attribute for <dir> tag.  If true, Civet will set
   the directory to the pipeline's XML root directory.
 - datestamp_prepend can now be combined with append and datestamp_append tags
 - Use "module purge" command to clear loaded modulefiles rather than  our own
   bash function

Version 1.7.2
-------------
Bug fixes
 - Fix 1.7.x regression that broke <related> files in <foreach>

Version 1.7.1
-------------
Bug fixes
 - Fix bug where job epilogue was not run for the Consolidate Logs job for
   TORQUE systems with "spool_as_final_name true" pbs_mom configuration

Version 1.7.0
-------------
Bug fixes
 - Summary mode of civet_status now indicates terminated pipelines
   (pipelines where one or more job was cancelled or deleted either manually or 
   by the batch system)

Features
 - Pipeline log directory is now included in failure emails
 - Use TORQUE job epilogue to catch termination due to walltime violation and
   provide more useful error messages and logging.